--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+    </style>
+  <title>Frontend Mentor | QR code component</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+
+  <div class="container">
+    <div>
+      <img class="qrcode-img" alt="qr code" src="images/image-qr-code.png">
+    </div>
+    <div class="text">
+      <h2>Improve your front-end skills by building projects</h2>
+      <p>  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+  </div>
+  
+
+  
+ 
 </body>
 </html>
