--- a/index.html
+++ b/index.html
@@ -12,19 +12,12 @@
 </head>
 <body>
 
-
-  <div class="container">
-    <div>
-      <img class="qrcode-img" alt="qr code" src="images/image-qr-code.png">
-    </div>
-    <div class="text">
-      <h2>Improve your front-end skills by building projects</h2>
+  <div class="container" role="main">
+    <img class="qrcode-img" alt="qr code" src="images/image-qr-code.png">
+    <div class="card">
+      <h1>Improve your front-end skills by building projects</h1>
       <p>  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-  </div>
-  
-
-  
- 
+  </div> 
 </body>
 </html>
