--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
 
-  <div class="container" role="main">
+  <main class="container">
     <img class="qrcode-img" alt="qr code" src="images/image-qr-code.png">
     <div class="card">
       <h1>Improve your front-end skills by building projects</h1>
       <p>  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-  </div> 
+  </main> 
 </body>
 </html>
